ハンバーガーメニューを作る。

--- a/footer.html
+++ b/footer.html
@@ -4,7 +4,7 @@
             <li class="foot__menu-link-wrap">
                 <nobr>
                     <a class="foot__menu-link" href="#">お知らせ</a><a class="foot__menu-link" href="#">スペシャルサンクス</a><a
-                        class="foot__menu-link" href="./site_introduction.html">NICHIJOU</a><a class="foot__menu-link"
+                        class="foot__menu-link" href="./site_introduction.html">サイトについて</a><a class="foot__menu-link"
                         href="#">お問い合わせ</a>
                 </nobr>
             </li>
