--- a/nav.html
+++ b/nav.html
@@ -1,12 +1,76 @@
-    <nav>
-      <ul id="gnav">
-        <li class="gnav-item item1"><a href="./index.html">日常のオトモ</a></li>
-        <li class="gnav-item item2"></li>
-        <li class="gnav-item item3">
-          <a href="#"><img src="img/icon/kensaku.png"/></a>
-        </li>
-        <li class="gnav-item item4">
-          <a href="#"><img src="./img/icon/iconmonstr-menu-1-64.png"/></a>
-        </li>
-      </ul>
-    </nav>
+<script>
+  $(".menu-trigger").on("click", function() {
+    if ($(this).hasClass("active")) {
+      $(this).removeClass("active");
+      $("#menu_nav").slideUp();
+    } else {
+      $(this).addClass("active");
+      $("#menu_nav").slideDown();
+    }
+  });
+</script>
+
+<nav>
+  <ul id="gnav">
+    <li class="gnav-item item1"><a href="./index.html">日常のオトモ</a></li>
+    <li class="gnav-item item2"></li>
+    <li class="gnav-item item3">
+      <a href="#"><img src="img/icon/kensaku.png"/></a>
+    </li>
+    <li>
+      <!-- <li class="gnav-item item4"> -->
+      <div id="menu_head">
+        <div class="menu-trigger" href="#">
+          <span></span> <span></span> <span></span>
+        </div>
+      </div>
+      <div id="menu_nav">
+        <ul id="nav_main-menu">
+          <li>
+            メニュー１
+            <div>メニュー2</div>
+            <div>メニュー3</div>
+            <div>メニュー4</div>
+          </li>
+          <li id="nav_sub-menu">
+            スペシャルサンクス
+            <div>サイトについて</div>
+            <div>お問い合わせ</div>
+            <div>利用規約</div>
+            <div>プライバシーポリシー</div>
+            <div>特定商取引法に基づく表示</div>
+          </li>
+          <li id="nav_sns-menu">
+            <a href="https://twitter.com/?lang=ja">twitter</a>
+            <div>メニュー2</div>
+            <div>メニュー3</div>
+          </li>
+        </ul>
+
+        <!--
+          <ul id="nav_main-menu">
+            <li>メニュー１</li>
+            <li>メニュー２</li>
+            <li>メニュー３</li>
+            <li>お知らせ</li>
+          </ul>
+          <ul id="nav_sub-menu">
+            <li>スペシャルサンクス</li>
+            <li>サイトについて</li>
+            <li>お問い合わせ</li>
+            <li>利用規約</li>
+            <li>プライバシーポリシー</li>
+            <li>特定商取引法に基づく表示</li>
+          </ul>
+          <ul id="nav_sns-menu">
+        -->
+        <!--
+          <li><a></a></li>
+            <li></li>
+            <li></li>
+          </ul>
+        -->
+      </div>
+    </li>
+  </ul>
+</nav>
