--- a/nav.html
+++ b/nav.html
@@ -41,7 +41,7 @@
             <div>特定商取引法に基づく表示</div>
           </li>
           <li id="nav_sns-menu">
-            <a href="https://twitter.com/?lang=ja">twitter</a>
+            <a href="https://twitter.com/?lang=ja"><img src="./img/icon/iconmonstr-twitter-2-32_navi.png"> twitter</a>
             <div>メニュー2</div>
             <div>メニュー3</div>
           </li>
