フォントの設定、一部背景色変更

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     <!-- stylesheets -->
     <link rel="stylesheet" href="css/jquery.bxslider.css" media="all" />
     <link rel="stylesheet" href="css/common.css" media="all" />
-
+    <link
+      href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho"
+      rel="stylesheet"
+    />
     <!-- javascript -->
     <script src="./js/jQuery.js"></script>
     <script src="./js/fadein.js"></script>
@@ -46,7 +49,7 @@
       <div class="title">
         <p id="toptext">アイクぬわら</p>
         <h1>日常のオトモ</h1>
-        <h2>zakka life is greatful!</h2>
+        <h2>zakka life is greatful !</h2>
       </div>
     </header>
 
