topページのハンバーガーメニューのスタイルを確定

--- a/footer.html
+++ b/footer.html
@@ -10,8 +10,9 @@
             </li>
             <li class="foot__submenu-link-wrap">
                 <nobr>
-                    <a class="foot__submenu-link" href="#">利用規約</a><a class="foot__submenu-link" href="#">プライバシーポリシー</a><a
-                        class="foot__submenu-link" href="#">特定商取引法に基づく表示</a>
+                    <a class="foot__submenu-link" href="#">利用規約</a>
+                    <a class="foot__submenu-link" href="#">プライバシーポリシー</a>
+                    <a class="foot__submenu-link" href="#">特定商取引法に基づく表示</a>
                 </nobr>
             </li>
         </ul>
@@ -19,13 +20,13 @@
 
     <div class="sns">
         <div class="icon-twitter">
-            <a href="https://twitter.com/?lang=ja"><img src="img/icon/iconmonstr-twitter-3-32.png" alt="" /></a>
+            <a href="https://twitter.com/?lang=ja"><img src="img/icon/iconmonstr-twitter-2-32_navi.png" alt="" /></a>
         </div>
         <div class="icon-fb">
-            <a href="https://www.facebook.com/sandwichman1974/"><img src="img/icon/facebook-3-32.png" alt="" /></a>
+            <a href="https://www.facebook.com/sandwichman1974/"><img src="img/icon/facebook.png" alt="" /></a>
         </div>
         <div class="icon-insta">
-            <a href="https://www.instagram.com/instagramjapan/?hl=ja"><img src="img/icon/instagram-1-32.png" /></a>
+            <a href="https://www.instagram.com/instagramjapan/?hl=ja"><img src="img/icon/instagram.png" /></a>
         </div>
     </div>
 </div>
