--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
     <!-- stylesheets -->
     <link rel="stylesheet" href="css/jquery.bxslider.css" media="all" />
     <link rel="stylesheet" href="css/common.css" media="all" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho"
-      rel="stylesheet"
-    />
+<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Sawarabi+Mincho&amp;subset=japanese" rel="stylesheet">
     <!-- javascript -->
     <script src="./js/jQuery.js"></script>
     <script src="./js/fadein.js"></script>
@@ -47,9 +44,9 @@
         />
       </div>
       <div class="title">
-        <p id="toptext">アイクぬわら</p>
+        <!-- <p id="toptext">アイクぬわら</p> -->
         <h1>日常のオトモ</h1>
-        <h2>zakka life is greatful !</h2>
+        <h2>テキストテキストテキストテキスト</h2>
       </div>
     </header>
 
@@ -79,7 +76,7 @@
                 <h4 class="menu-text">感想</h4>
               </a>
               <p class="menu-info">
-                ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
+                あああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
               </p>
             </li>
 
