--- a/nav.html
+++ b/nav.html
@@ -18,58 +18,50 @@
       <a href="#"><img src="img/icon/kensaku.png"/></a>
     </li>
     <li>
-      <!-- <li class="gnav-item item4"> -->
       <div id="menu_head">
         <div class="menu-trigger" href="#">
           <span></span> <span></span> <span></span>
         </div>
       </div>
-      <div id="menu_nav">
-        <ul id="nav_main-menu">
-          <li>
-            メニュー１
-            <div>メニュー2</div>
-            <div>メニュー3</div>
-            <div>メニュー4</div>
-          </li>
-          <li id="nav_sub-menu">
-            スペシャルサンクス
-            <div>サイトについて</div>
-            <div>お問い合わせ</div>
-            <div>利用規約</div>
-            <div>プライバシーポリシー</div>
-            <div>特定商取引法に基づく表示</div>
-          </li>
-          <li id="nav_sns-menu">
-            <a href="https://twitter.com/?lang=ja"><img src="./img/icon/iconmonstr-twitter-2-32_navi.png"> twitter</a>
-            <div>メニュー2</div>
-            <div>メニュー3</div>
-          </li>
-        </ul>
 
-        <!--
-          <ul id="nav_main-menu">
-            <li>メニュー１</li>
-            <li>メニュー２</li>
-            <li>メニュー３</li>
-            <li>お知らせ</li>
-          </ul>
+      <div id="menu_nav">
+        <div class="menu_nav-wrap">
+          <div id="nav_main-menu">
+            <div><a href="#">メニュー１</a></div>
+            <div><a href="#">メニュー２</a></div>
+            <div><a href="#">メニュー３</a></div>
+            <div><a href="#">メニュー４</a></div>
+          </div>
           <ul id="nav_sub-menu">
-            <li>スペシャルサンクス</li>
-            <li>サイトについて</li>
-            <li>お問い合わせ</li>
-            <li>利用規約</li>
-            <li>プライバシーポリシー</li>
-            <li>特定商取引法に基づく表示</li>
+            <li>
+              <a href="#">スペシャルサンクス</a>
+              <div><a href="#">お問い合わせ</a></div>
+              <div><a href="#">プライバシーポリシー</a></div>
+            </li>
+            <li>
+              <a href="#">利用規約</a>
+              <div><a href="#">サイトについて</a></div>
+              <div><a href="#">特定商取引法に基づく表示</a></div>
+            </li>
           </ul>
-          <ul id="nav_sns-menu">
-        -->
-        <!--
-          <li><a></a></li>
-            <li></li>
-            <li></li>
+          <ul id="sns_menu-list">
+            <li class="nav_sns-menu">
+              <a href="https://twitter.com/?lang=ja"
+                ><img src="./img/icon/iconmonstr-twitter-2-32_navi.png"
+              /></a>
+            </li>
+            <li class="nav_sns-menu">
+              <a href="https://twitter.com/?lang=ja"
+                ><img src="./img/icon/facebook.png"
+              /></a>
+            </li>
+            <li class="nav_sns-menu">
+              <a href="https://twitter.com/?lang=ja"
+                ><img src="./img/icon/instagram.png"
+              /></a>
+            </li>
           </ul>
-        -->
+        </div>
       </div>
     </li>
   </ul>
