サイトのタイトル・トップページのサイトタイトルのフォントを変更

--- a/allgallery.html
+++ b/allgallery.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <title>日常のオトモ</title>
+    <title>持ちモノ写真展</title>
+
     <meta
       name="description"
       content="授業内課題として、日用品を過度におしゃれに紹介するWebギャラリー。"
@@ -24,6 +25,11 @@
     <link rel="stylesheet" href="css/jquery.bxslider.css" media="all" />
     <link rel="stylesheet" href="css/common.css" media="all" />
     <link rel="stylesheet" href="css/allgallery.css" media="all" />
+    <link
+    href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Sawarabi+Mincho&amp;subset=japanese"
+    rel="stylesheet"
+  />
+
     <!-- javascript -->
     <script src="./js/jQuery.js"></script>
     <script src="./参考/application-628903e3a09a310c043fcb01cdc70caf130d6c9ee1dc39827619.js"></script>
