--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <title>日常のオトモ</title>
+    <title>持ちモノ写真展</title>
     <meta
       name="description"
       content="授業内課題として、日用品を過度におしゃれに紹介するWebギャラリー。"
@@ -21,15 +21,18 @@
     <!-- stylesheets -->
     <link rel="stylesheet" href="css/jquery.bxslider.css" media="all" />
     <link rel="stylesheet" href="css/common.css" media="all" />
-<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Sawarabi+Mincho&amp;subset=japanese" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Sawarabi+Mincho&amp;subset=japanese"
+      rel="stylesheet"
+    />
     <!-- javascript -->
     <script src="./js/jQuery.js"></script>
     <script src="./js/fadein.js"></script>
     <script>
       $(function() {
-        $("#common_nav").load("nav.html");
-        $("#common_footer").load("footer.html");
-      });
+        $('#common_nav').load('nav.html')
+        $('#common_footer').load('footer.html')
+      })
     </script>
   </head>
 
@@ -44,8 +47,8 @@
         />
       </div>
       <div class="title">
-        <!-- <p id="toptext">アイクぬわら</p> -->
-        <h1>日常のオトモ</h1>
+        <p id="toptext">あなたの</p>
+        <h1>持ちモノ写真展</h1>
         <h2>テキストテキストテキストテキスト</h2>
       </div>
     </header>
@@ -94,7 +97,7 @@
             </li>
           </ul>
           <div class="six col">
-            <a href="#" class="button" id="button-4"
+            <a href="./allgallery.html" class="button" id="button-4"
               >そんなことより写真集を見る</a
             >
           </div>
