--- a/nav.html
+++ b/nav.html
@@ -12,7 +12,7 @@
 
 <nav>
   <ul id="gnav">
-    <li class="gnav-item item1"><a href="./index.html">日常のオトモ</a></li>
+    <li class="gnav-item item1"><a href="./index.html">あな持ち</a></li>
     <li class="gnav-item item2"></li>
     <li class="gnav-item item3">
       <a href="#"><img src="img/icon/kensaku.png"/></a>
