--- a/exhibitions_page-6.html
+++ b/exhibitions_page-6.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <title>日常のオトモ</title>
+    <title>持ちモノ写真展</title>
     <meta
       name="description"
       content="授業内課題として、日用品を過度におしゃれに紹介するWebギャラリー。"
@@ -22,6 +22,10 @@
     <link rel="stylesheet" href="css/jquery.bxslider.css" media="all" />
     <link rel="stylesheet" href="css/common.css" media="all" />
     <link rel="stylesheet" href="css/exhibitions_page.css" media="all" />
+    <link
+    href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Sawarabi+Mincho&amp;subset=japanese"
+    rel="stylesheet"
+  />
 
     <!-- javascript -->
     <script src="./js/jQuery.js"></script>
