カテゴリーボタンのデザイン

--- a/allgallery.html
+++ b/allgallery.html
@@ -19,7 +19,7 @@
     <link
       rel="icon"
       sizes="192x192"
-      href="./img/icon/シャッターアイコン4 (2).png"
+      href="./img/icon/シャッターアイコン4.png"
     />
     <!-- stylesheets -->
     <link rel="stylesheet" href="css/common.css" media="all" />
@@ -159,51 +159,6 @@
               すべてのカテゴリー
             </div>
 
-            <!-- <div
-              class="head__discover-cat-select-dropdown cmn__dropdown-wrap"
-              id="catsDropdown"
-            >
-              <ul id="filters" class="button-group">
-                <li class="category-btn" id="category_0">
-                  <button data-filter="*">すべてのカテゴリー</button>
-                </li>
-                <li class="category-btn" id="category_2">
-                  <button data-filter=".type2">カテゴリ2</button>
-                </li>
-                <li class="category-btn" id="category_3">
-                  <button data-filter=".type3">カテゴリ3</button>
-                </li>
-                <li class="category-btn" id="category_4">
-                  <button data-filter=".type4">カテゴリ4</button>
-                </li>
-                <li class="category-btn" id="category_5">
-                  <button data-filter=".type5">カテゴリ5</button>
-                </li>
-                <li class="category-btn" id="category_6">
-                  <button data-filter=".type6">カテゴリ6</button>
-                </li>
-                <li class="category-btn" id="category_7">
-                  <button data-filter=".type7">カテゴリ7</button>
-                </li>
-                <li class="category-btn" id="category_8">
-                  <button data-filter=".type8">カテゴリ8</button>
-                </li>
-                <li class="category-btn" id="category_9">
-                  <button data-filter=".type9">カテゴリ9</button>
-                </li>
-
-                <li class="category-btn" id="category_10">
-                  <button data-filter=".type10">カテゴリ10</button>
-                </li>
-                <li class="category-btn" id="category_11">
-                  <button data-filter=".type11">カテゴリ11</button>
-                </li>
-                <li class="category-btn" id="category_1">
-                  <button data-filter=".type1">カテゴリ１</button>
-                </li>
-              </ul>
-            </div> -->
-
             <div
               class="head__discover-cat-select-dropdown cmn__dropdown-wrap"
               id="catsDropdown"
@@ -278,6 +233,79 @@
           </figure>
           <p class="menu-info">個展名</p>
         </div>
+        <div class="item type2">
+          <figure>
+            <a href="./exhibitions_page-4.html">
+              <img src="img/ph_menu01.jpg" alt="" />
+              <figcaption><h3>いいね数とか取得</h3></figcaption>
+            </a>
+          </figure>
+          <p class="menu-info">個展名</p>
+        </div>
+        <div class="item type3">
+          <figure>
+            <a href="./exhibitions_page-4.html">
+              <img src="img/ph_menu01.jpg" alt="" />
+              <figcaption><h3>いいね数とか取得</h3></figcaption>
+            </a>
+          </figure>
+          <p class="menu-info">個展名</p>
+        </div>
+        <div class="item type4">
+          <figure>
+            <a href="./exhibitions_page-4.html">
+              <img src="img/ph_menu01.jpg" alt="" />
+              <figcaption><h3>いいね数とか取得</h3></figcaption>
+            </a>
+          </figure>
+          <p class="menu-info">個展名</p>
+        </div>
+        <div class="item type5">
+          <figure>
+            <a href="./exhibitions_page-4.html">
+              <img src="img/ph_menu01.jpg" alt="" />
+              <figcaption><h3>いいね数とか取得</h3></figcaption>
+            </a>
+          </figure>
+          <p class="menu-info">個展名</p>
+        </div>
+        <div class="item type6">
+          <figure>
+            <a href="./exhibitions_page-4.html">
+              <img src="img/ph_menu01.jpg" alt="" />
+              <figcaption><h3>いいね数とか取得</h3></figcaption>
+            </a>
+          </figure>
+          <p class="menu-info">個展名</p>
+        </div>
+        <div class="item type7">
+          <figure>
+            <a href="./exhibitions_page-4.html">
+              <img src="img/ph_menu01.jpg" alt="" />
+              <figcaption><h3>いいね数とか取得</h3></figcaption>
+            </a>
+          </figure>
+          <p class="menu-info">個展名</p>
+        </div>
+        <div class="item type8">
+          <figure>
+            <a href="./exhibitions_page-4.html">
+              <img src="img/ph_menu01.jpg" alt="" />
+              <figcaption><h3>いいね数とか取得</h3></figcaption>
+            </a>
+          </figure>
+          <p class="menu-info">個展名</p>
+        </div>
+        <div class="item type1">
+          <figure>
+            <a href="./exhibitions_page-4.html">
+              <img src="img/ph_menu01.jpg" alt="" />
+              <figcaption><h3>いいね数とか取得</h3></figcaption>
+            </a>
+          </figure>
+          <p class="menu-info">個展名</p>
+        </div>
+
       </div>
 
       <!-- 読み込み中のヤツ -->
