ギャラリー一覧のデザインに四苦八苦。

--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
             <li class="main1-item">
               <a href="./site_introduction.html">
                 <img src="img/ph_menu01.jpg" alt="" />
-                <h4 class="menu-text">このサイトは？</h4>
+                <h4 class="menu-text left-one">このサイトは？</h4>
               </a>
               <p class="menu-info">
-                何がどう転んでこのＷＥＢサイトが作られたか、いったい誰得なのか。賢そうに言えば模倣試作、しかし普通に言えば中華版というほかないこのサイトの目的とは？
+                何がどう転んでこのＷＥＢサイトが作られ、いったい誰得か。賢そうに言えば模倣、しかし普通に言えば中華版というほかないこのサイトの目的とは？
               </p>
             </li>
 
             <li class="main1-item">
               <a href="#">
                 <img src="img/ph_menu01.jpg" alt="" />
-                <h4 class="menu-text">感想</h4>
+                <h4 class="menu-text middle-one">感想</h4>
               </a>
               <p class="menu-info">
                 あああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
@@ -86,7 +86,7 @@
             <li class="main1-item">
               <a href="#">
                 <img src="img/ph_menu01.jpg" alt="" />
-                <h4 class="menu-text">作業風景、撮影仲間</h4>
+                <h4 class="menu-text right-one">作業風景、撮影仲間</h4>
               </a>
               <p class="menu-info">
                 ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
