--- a/allgallery.html
+++ b/allgallery.html
@@ -71,8 +71,10 @@
           // percentPosition: true,
           layoutMode: "fitRows",
           masonry: {
-            columnWidth: 500
-          }
+            columnWidth: 300,
+            isFitWidth: true  //親要素の幅に合わせてカラム数を自動調整するかしないか
+          },
+          
         });
         // jQueryを使って、クリックイベントを追加
         $("#filters").on("click", "button", function() {
@@ -156,7 +158,7 @@
           <!-- カテゴリーフィルター -->
           <div class="head__discover-cat-select-wrap">
             <div class="head__discover-cat-select cmn__dropdown-btn">
-              すべてのカテゴリー
+              カテゴリー
             </div>
 
             <div
@@ -196,114 +198,124 @@
     </header>
     <section>
       <div id="container">
-        <div class="item type9">
+        <div class="item type1">
           <figure>
             <a href="./exhibitions_page-1.html">
               <img src="img/ph_menu01.jpg" alt="" />
               <figcaption><h3>いいね数とか取得</h3></figcaption>
             </a>
           </figure>
-          <p class="menu-info">個展名</p>
+          <p class="work-info gallery-info">title</h3>
+          <p class="work-info artist-name">name</h3>
         </div>
 
-        <div class="item w2 type2">
-          <figure>
-            <a href="./exhibitions_page-2.html">
-              <img src="img/ph_menu01.jpg" alt="" />
-              <figcaption><h3>いいね数とか取得</h3></figcaption>
-            </a>
-          </figure>
-          <p class="menu-info">個展名</p>
-        </div>
-        <div class="item type1">
-          <figure>
-            <a href="./exhibitions_page-3.html">
-              <img src="img/ph_menu01.jpg" alt="" />
-              <figcaption><h3>いいね数とか取得3</h3></figcaption>
-            </a>
-          </figure>
-          <p class="menu-info">個展名</p>
-        </div>
-        <div class="item type9">
-          <figure>
-            <a href="./exhibitions_page-4.html">
-              <img src="img/ph_menu01.jpg" alt="" />
-              <figcaption><h3>いいね数とか取得</h3></figcaption>
-            </a>
-          </figure>
-          <p class="menu-info">個展名</p>
-        </div>
-        <div class="item type2">
-          <figure>
-            <a href="./exhibitions_page-4.html">
-              <img src="img/ph_menu01.jpg" alt="" />
-              <figcaption><h3>いいね数とか取得</h3></figcaption>
-            </a>
-          </figure>
-          <p class="menu-info">個展名</p>
-        </div>
-        <div class="item type3">
-          <figure>
-            <a href="./exhibitions_page-4.html">
-              <img src="img/ph_menu01.jpg" alt="" />
-              <figcaption><h3>いいね数とか取得</h3></figcaption>
-            </a>
-          </figure>
-          <p class="menu-info">個展名</p>
-        </div>
+                <div class="item type2">
+                  <figure>
+                    <a href="./exhibitions_page-1.html">
+                      <img src="img/ph_menu01.jpg" alt="" />
+                      <figcaption>
+                        <h3>いいね数とか取得</h3>
+                      </figcaption>
+                    </a>
+                  </figure>
+                  <p class="work-info gallery-info">テキストテキストテキスト</h3>
+                    <p class="work-info artist-name">テキストテキストテキスト</h3>
+                </div>
         <div class="item type4">
           <figure>
-            <a href="./exhibitions_page-4.html">
+            <a href="./exhibitions_page-1.html">
               <img src="img/ph_menu01.jpg" alt="" />
-              <figcaption><h3>いいね数とか取得</h3></figcaption>
+              <figcaption>
+                <h3>いいね数とか取得</h3>
+              </figcaption>
             </a>
           </figure>
-          <p class="menu-info">個展名</p>
+          <p class="work-info gallery-info">the world</h3>
+            <p class="work-info artist-name">吉岡　計</h3>
         </div>
         <div class="item type5">
           <figure>
-            <a href="./exhibitions_page-4.html">
+            <a href="./exhibitions_page-1.html">
               <img src="img/ph_menu01.jpg" alt="" />
-              <figcaption><h3>いいね数とか取得</h3></figcaption>
+              <figcaption>
+                <h3>いいね数とか取得</h3>
+              </figcaption>
             </a>
           </figure>
-          <p class="menu-info">個展名</p>
+          <p class="work-info gallery-info">the world</h3>
+            <p class="work-info artist-name">吉岡　計</h3>
         </div>
         <div class="item type6">
           <figure>
-            <a href="./exhibitions_page-4.html">
+            <a href="./exhibitions_page-1.html">
               <img src="img/ph_menu01.jpg" alt="" />
-              <figcaption><h3>いいね数とか取得</h3></figcaption>
+              <figcaption>
+                <h3>いいね数とか取得</h3>
+              </figcaption>
             </a>
           </figure>
-          <p class="menu-info">個展名</p>
+          <p class="work-info gallery-info">the world</h3>
+            <p class="work-info artist-name">吉岡　計</h3>
+        </div>
+        <div class="item type9">
+          <figure>
+            <a href="./exhibitions_page-1.html">
+              <img src="img/ph_menu01.jpg" alt="" />
+              <figcaption>
+                <h3>いいね数とか取得</h3>
+              </figcaption>
+            </a>
+          </figure>
+          <p class="work-info gallery-info">the world</h3>
+            <p class="work-info artist-name">吉岡　計</h3>
         </div>
         <div class="item type7">
           <figure>
-            <a href="./exhibitions_page-4.html">
+            <a href="./exhibitions_page-1.html">
               <img src="img/ph_menu01.jpg" alt="" />
-              <figcaption><h3>いいね数とか取得</h3></figcaption>
+              <figcaption>
+                <h3>いいね数とか取得</h3>
+              </figcaption>
             </a>
           </figure>
-          <p class="menu-info">個展名</p>
+          <p class="work-info gallery-info">the world</h3>
+            <p class="work-info artist-name">吉岡　計</h3>
         </div>
         <div class="item type8">
           <figure>
-            <a href="./exhibitions_page-4.html">
+            <a href="./exhibitions_page-1.html">
               <img src="img/ph_menu01.jpg" alt="" />
-              <figcaption><h3>いいね数とか取得</h3></figcaption>
+              <figcaption>
+                <h3>いいね数とか取得</h3>
+              </figcaption>
             </a>
           </figure>
-          <p class="menu-info">個展名</p>
+          <p class="work-info gallery-info">the world</h3>
+            <p class="work-info artist-name">吉岡　計</h3>
         </div>
-        <div class="item type1">
+        <div class="item type9">
           <figure>
-            <a href="./exhibitions_page-4.html">
+            <a href="./exhibitions_page-1.html">
               <img src="img/ph_menu01.jpg" alt="" />
-              <figcaption><h3>いいね数とか取得</h3></figcaption>
+              <figcaption>
+                <h3>いいね数とか取得</h3>
+              </figcaption>
             </a>
           </figure>
-          <p class="menu-info">個展名</p>
+          <p class="work-info gallery-info">the world</h3>
+            <p class="work-info artist-name">吉岡　計</h3>
+        </div>
+        <div class="item type10">
+          <figure>
+            <a href="./exhibitions_page-1.html">
+              <img src="img/ph_menu01.jpg" alt="" />
+              <figcaption>
+                <h3>いいね数とか取得</h3>
+              </figcaption>
+            </a>
+          </figure>
+          <p class="work-info gallery-info">the world</h3>
+            <p class="work-info artist-name">吉岡　計</h3>
         </div>
 
       </div>
